--- a/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
@@ -41,7 +41,11 @@
       autocomplete="off"
     >
       <div class="w-12 flex flex-column justify-content-start h-9rem">
-        <label for="inputLink" class="block text-left mb-2">Descripción</label>
+        <label
+          for="inputLink"
+          class="block text-left mb-2 font-medium text-bluegray-800 font-medium text-bluegray-800"
+          >Descripción</label
+        >
         <textarea
           rows="5"
           cols="30"
