feat: Implement talent filter on the dashboard

--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -81,7 +81,7 @@
       <div class="w-12 flex flex-column justify-content-start mb-2">
         <label for="languages" class="block text-left mb-2">Idioma</label>
         <p-dropdown
-          [options]="languages"
+          [options]="language"
           [showClear]="true"
           placeholder="Nombre del idioma"
           optionLabel="name"
@@ -102,7 +102,7 @@
       <div class="w-12 flex flex-column justify-content-start mb-2">
         <label for="proficiency" class="block text-left mb-2">Nivel</label>
         <p-dropdown
-          [options]="levels"
+          [options]="proficiency"
           [showClear]="true"
           placeholder="Nombre del idioma"
           optionLabel="name"
@@ -198,7 +198,7 @@
       <div class="w-12 flex flex-column justify-content-start mb-2">
         <label for="editLanguages" class="block text-left mb-2">Idioma</label>
         <p-dropdown
-          [options]="languages"
+          [options]="language"
           [showClear]="true"
           placeholder="Nombre del idioma"
           optionLabel="name"
@@ -221,7 +221,7 @@
       <div class="w-12 flex flex-column justify-content-start mb-2">
         <label for="editProficiency" class="block text-left mb-2">Nivel</label>
         <p-dropdown
-          [options]="levels"
+          [options]="proficiency"
           [showClear]="true"
           placeholder="Nombre del idioma"
           optionLabel="name"
