--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -1,4 +1,6 @@
-<shared-control-panel></shared-control-panel>
+<shared-control-panel
+  (onFilterReqVal)="filterTalent($event)"
+></shared-control-panel>
 
 <div class="bg-white py-0 px-3 sm:px-6 xl:px-8 shadow-none content">
   <div class="flex flex-wrap border-round w-full">
@@ -9,7 +11,7 @@
         <p-scrollPanel
           [style]="{ width: '100%', height: 'calc(100vh - 190px)' }"
         >
-          <shared-pers-prof-crd></shared-pers-prof-crd>
+          <shared-pers-prof-crd [talents]="talents"></shared-pers-prof-crd>
         </p-scrollPanel>
       </div>
     </div>
