--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -14,89 +14,90 @@
       class="w-12 sm:w-8 font-bold p-2 flex flex-wrap align-items-center justify-content-center sm:justify-content-between"
     >
       <div class="mx-1 mb-2 md:mb-0">
-        <p-overlayPanel #hbd [style]="{ width: '300px' }">
+        <p-overlayPanel #techSkills [style]="{ width: '350px' }">
           <ng-template pTemplate>
-            <div class="py-2">
-              <p-chips
-                [(ngModel)]="selectedSkills"
-                [allowDuplicate]="false"
-              ></p-chips>
-            </div>
-            <div class="field-checkbox" *ngFor="let skill of skills">
-              <p-checkbox
-                name="group1"
-                [value]="skill.name"
-                [(ngModel)]="selectedSkills"
-                [inputId]="skill.code"
-              ></p-checkbox>
-              <label [for]="skill.code">{{ skill.name }}</label>
-            </div>
+            <p-chips
+              [(ngModel)]="selectedTechSks"
+              [allowDuplicate]="false"
+            ></p-chips>
+            <p-scrollPanel [style]="{ width: '100%', height: '300px' }">
+              <div class="field-checkbox m-0 p-1" *ngFor="let skill of skills">
+                <p-checkbox
+                  name="groupSk"
+                  [value]="skill.name"
+                  [(ngModel)]="selectedTechSks"
+                  [inputId]="skill.name"
+                ></p-checkbox>
+                <label [for]="skill.name">{{ skill.name }}</label>
+              </div>
+            </p-scrollPanel>
           </ng-template>
         </p-overlayPanel>
 
         <p-button
           label="Habilidades"
           styleClass="p-button-sm p-button-rounded p-button-secondary"
-          (click)="hbd.toggle($event)"
+          (click)="isSkillsListEmpty ? null : techSkills.toggle($event)"
+          [disabled]="isSkillsListEmpty"
         ></p-button>
       </div>
       <div class="mx-1 mb-2 md:mb-0">
-        <p-overlayPanel #idiomaOv [style]="{ width: '180px' }">
+        <p-overlayPanel #languageOP [style]="{ width: '180px' }">
           <ng-template pTemplate>
-            <div class="field-checkbox">
-              <p-listbox
-                [options]="language"
-                optionLabel="name"
-                [style]="{ border: 'none' }"
-              ></p-listbox>
-            </div>
+            <p-listbox
+              [options]="language"
+              optionLabel="name"
+              optionValue="id"
+              [(ngModel)]="selectedIdLanguage"
+              styleClass="border-none"
+            ></p-listbox>
           </ng-template>
         </p-overlayPanel>
 
         <p-button
           label="Idioma"
           styleClass="p-button-sm p-button-rounded p-button-secondary"
-          (click)="idiomaOv.toggle($event)"
+          (click)="isLanguageListEmpty ? null : languageOP.toggle($event)"
+          [disabled]="isLanguageListEmpty"
         ></p-button>
       </div>
       <div class="mx-1 mb-2 md:mb-0">
-        <p-overlayPanel #levelOv [style]="{ width: '180px' }">
+        <p-overlayPanel #proficiencyOP [style]="{ width: '180px' }">
           <ng-template pTemplate>
-            <div class="field-checkbox">
-              <p-listbox
-                [options]="level"
-                [(ngModel)]="selectedEnglishLevel"
-                optionLabel="name"
-                [style]="{ border: 'none' }"
-              ></p-listbox>
-            </div>
+            <p-listbox
+              [options]="proficiency"
+              optionLabel="name"
+              optionValue="id"
+              [(ngModel)]="selectedIdProficiency"
+              styleClass="border-none"
+            ></p-listbox>
           </ng-template>
         </p-overlayPanel>
 
         <p-button
           label="Nivel"
           styleClass="p-button-sm p-button-rounded p-button-secondary"
-          (click)="levelOv.toggle($event)"
+          (click)="isProficiencyListEmpty ? null : proficiencyOP.toggle($event)"
+          [disabled]="isProficiencyListEmpty"
         ></p-button>
       </div>
       <div class="mx-1 mb-2 md:mb-0">
         <p-overlayPanel #favorite [style]="{ width: '180px' }">
           <ng-template pTemplate>
-            <div class="field-checkbox">
-              <p-listbox
-                [options]="favorites"
-                [(ngModel)]="selectedFavorite"
-                optionLabel="name"
-                [style]="{ border: 'none' }"
-              ></p-listbox>
-            </div>
+            <p-listbox
+              [options]="favorites"
+              optionLabel="name"
+              [(ngModel)]="selectedFavorite"
+              styleClass="border-none"
+            ></p-listbox>
           </ng-template>
         </p-overlayPanel>
 
         <p-button
           label="Favoritos"
           styleClass="p-button-sm p-button-rounded p-button-secondary"
-          (click)="favorite.toggle($event)"
+          (click)="isFavoriteListEmpty ? null : favorite.toggle($event)"
+          [disabled]="isFavoriteListEmpty"
         ></p-button>
       </div>
       <div class="mx-1 mb-2 md:mb-0">
@@ -106,6 +107,7 @@
             type="text"
             pInputText
             placeholder="Buscar talento o puesto"
+            [(ngModel)]="term"
             class="p-inputtext-sm"
           />
         </span>
@@ -114,6 +116,7 @@
         <p-button
           label="Buscar"
           styleClass="p-button-sm p-button-success"
+          (onClick)="emitFilter()"
         ></p-button>
       </div>
     </div>
