--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -20,7 +20,7 @@
     <div class="border-round-sm">
       <div class="flex align-items-center flex-wrap gap-1">
         <p-chip
-          *ngFor="let skill of inlineTechnicalSkills"
+          *ngFor="let skill of inLineTechSkills"
           [label]="skill.name"
           styleClass="custom-chip"
         ></p-chip>
