--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -14,21 +14,22 @@
     </div>
   </div>
   <div
-    class="w-12 flex align-items-center surface-hover p-1 mx-0 sm:mx-3 border-round-md"
+    class="w-12 flex align-items-center surface-hover border-round-md p-1 mx-0 sm:mx-3 my-1"
+    *ngFor="let item of langProficiency"
   >
     <div class="w-3 sm:w-2 py-1 flex align-items-center justify-content-center">
       <div class="flex flex-column gap-2">
         <div class="flex align-items-center font-semibold text-base text-800">
-          Inglés
+          {{ item.languageName | titlecase }}
         </div>
         <div class="flex align-items-center text-500 text-sm font-normal">
-          Avanzado
+          {{ item.proficiency | titlecase }}
         </div>
       </div>
     </div>
     <div class="w-7 sm:w-8 p-1 flex align-items-center justify-content-start">
       <p-rating
-        [(ngModel)]="rating"
+        [(ngModel)]="item.starCount"
         [stars]="5"
         [cancel]="false"
         [readonly]="true"
