--- a/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
@@ -1,9 +1,7 @@
 <div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
   <div class="w-12 p-1 flex align-items-center">
     <span class="text-left text-sm text-500">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe enim neque
-      harum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
-      enim neque harum.
+      {{ description }}
       <span
         class="cursor-pointer mx-2 text-500 hover:text-700"
         (click)="openEditDescriptionDialog()"
