feat: Add talent info on edit forms

--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -47,7 +47,9 @@
           type="button"
           icon="pi pi-pencil"
           class="p-button-rounded p-button-secondary p-button-text"
-          (click)="openEditEducationalExperienceDialog()"
+          (click)="
+            openEditEducationalExperienceDialog(item.idEducationalExperience)
+          "
         ></button>
       </div>
     </div>
